@@ -160,8 +160,9 @@ INPUT       ("\\"[#"']|["]("\\\\"|"\\"["]|[^\n\000"])*["]|[']("\\"[']|"\\\\"|[^\
 
 <NORMAL>{GENERIC_ID} {
 	phpdbg_init_param(yylval, STR_PARAM);
-	yylval->str = estrndup(yytext, yyleng - unescape_string(yytext));
-	yylval->len = yyleng;
+	size_t len = yyleng - unescape_string(yytext);
+	yylval->str = estrndup(yytext, len);
+	yylval->len = len;
 	return T_ID;
 }
 
