@@ -9,6 +9,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-17623 (Broken stack overflow detection for variable
     compilation). (ilutov)
 
+- PHPDBG:
+  . Partially fixed bug GH-17387 (Trivial crash in phpdbg lexer). (nielsdos)
+
 13 Feb 2025, PHP 8.3.17
 
 - Core:
